--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
-  text-align: center;
+body {
+    height: 100vh;
+    font-family: Garamond, serif;
+    background: rgb(34,193,195);
+    background: linear-gradient(315deg, rgba(34,193,195,0.7010154403558299) 15%, rgba(253,187,45,0.7262255243894433) 100%);
+    position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content {
+    width: 60%;
+    display: grid;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+    font-size: large;
+    font-family: Garamond, serif;
+    background-color: azure;
+    padding: 30px;
+    border: none;
+    border-radius: 100px;
+    outline:none;
+    margin: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover {
+    margin: 0;
+    padding: 35px;
+    transition: padding 100ms, margin 100ms;
+    cursor: pointer;
+    opacity: 0.7;
 }
 
-.App-link {
-  color: #61dafb;
+/*title page*/
+
+#title-content {
+    width: 70%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title-text {
+    text-align: center;
+}
+
+#title {
+    text-align: center;
+    font-size: 50px;
+    grid-column: 1;
+    grid-row: 1 / 3;
+}
+
+#title:hover {
+    color: azure;
+}
+
+#description {
+    margin: 0 50px 0 50px;
+    text-align: justify;
+    font-size: 20px;
+    grid-column: 1;
+    grid-row: 3 / 5;
+}
+
+#start-button {
+    font-size: x-large;
+    grid-column: 2;
+    grid-row: 2 / 4;
+}
+
+@media(max-width: 600px)  {
+    #title-content {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+        grid-gap: 5px;
+    }
+
+    #title {
+        grid-row: 1;
+    }
+
+    #description {
+        grid-row: 3;
+    }
+
+    #start-button {
+        grid-column: 1;
+        grid-row: 2
+    }
+}
+
+/*app page*/
+
+#mainApp-content {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+#quest-name {
+    font-size: xx-large;
+    grid-column: 1 / 4;
+    grid-row: 1;
+    text-align: center;
+}
+
+#stop-button {
+    margin: auto;
+    width: 100%;
+    font-size: medium;
+    padding: 20px;
+    grid-column: 1 / 4;
+    grid-row: 3;
+}
+
+#stop-button:hover {
+    padding: 23px;
+}
+
+
+/*end page*/
+
+#end-content {
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 10px;
+}
+
+#output {
+    text-align: center;
 }
