--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@ body {
     transform: translate(-50%, -50%);
 }
 
-button {
+.answer-button,
+.route-link {
     font-size: large;
     font-family: Garamond, serif;
     background-color: azure;
@@ -28,7 +29,16 @@ button {
     margin: 5px;
 }
 
-button:hover {
+.route-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
+.answer-button:hover,
+.route-link:hover {
     margin: 0;
     padding: 35px;
     transition: padding 100ms, margin 100ms;
@@ -38,14 +48,14 @@ button:hover {
 
 /*title page*/
 
-#title-content {
+#home-content {
     width: 70%;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-gap: 10px;
 }
 
-.title-text {
+.home-text {
     text-align: center;
 }
 
@@ -68,14 +78,14 @@ button:hover {
     grid-row: 3 / 5;
 }
 
-#start-button {
+#start-link {
     font-size: x-large;
     grid-column: 2;
     grid-row: 2 / 4;
 }
 
 @media(max-width: 600px)  {
-    #title-content {
+    #home-content {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(3, 1fr);
         grid-gap: 5px;
@@ -89,7 +99,7 @@ button:hover {
         grid-row: 3;
     }
 
-    #start-button {
+    #start-link {
         grid-column: 1;
         grid-row: 2
     }
@@ -110,7 +120,7 @@ button:hover {
     text-align: center;
 }
 
-#stop-button {
+#stop-link {
     margin: auto;
     width: 100%;
     font-size: medium;
@@ -119,7 +129,7 @@ button:hover {
     grid-row: 3;
 }
 
-#stop-button:hover {
+#stop-link:hover {
     padding: 23px;
 }
 
